src/y.output
   0  $accept : input $end

   1  input : rules

   2  rules :
   3        | rules rule
   4        | rules mapping
   5        | rules transformation

   6  rule : T_IDENT ':' options ';'
   7       | T_RESOURCE T_IDENT ':' options ';'
   8       | T_IDENT '(' params ')' ':' options ';'

   9  transformation : T_XFORM T_IDENT ':' transopts ';'

  10  transopts : transopt transopts
  11            | transopt

  12  transopt : T_LITERAL ':' transcmd

  13  transcmd : transaddr T_IDENT translist ';'

  14  transaddr : T_INTEGER
  15            | T_INTEGER ',' T_INTEGER
  16            |

  17  translist : T_LITERAL translist
  18            |

  19  mapping : T_IDENT ':' mapopts ';'

  20  mapopts : mapopts mapopt
  21          | mapopt

  22  mapopt : T_LITERAL 'M' mapaction
  23         | T_LITERAL 'R' T_LITERAL

  24  mapaction : T_LITERAL
  25            | T_LITERAL '/' T_LITERAL

  26  params : params T_IDENT
  27         | T_IDENT

  28  options : option '|' options
  29          | option

  30  option : atoms

  31  atoms : atoms atom
  32        | atom

  33  atom : atom2
  34       | atom '>' T_IDENT
  35       | T_DEREF atom
  36       | T_IDENT 'V' atom
  37       | T_IDENT '=' atom
  38       | '$' T_IDENT
  39       | '{' imperatives '}'
  40       | '?' atom
  41       | atom '*'
  42       | atom '+'
  43       | '[' options ']'
  44       | T_REPEAT '(' atom ',' T_INTEGER ')'
  45       | T_REPEAT '(' atom ',' T_IDENT ')'
  46       | T_UNIQUE atom
  47       | T_ENUM atom
  48       | T_PICK '(' T_INTEGER ',' atom ')'

  49  atom2 : T_LITERAL
  50        | T_IDENT
  51        | T_IDENT '(' atoms ')'

  52  imperatives :
  53              | imperative
  54              | imperatives ';' imperative

  55  imperative : T_IDENT '=' expr
  56             | '=' expr

  57  expr : T_INTEGER
  58       | T_LITERAL
  59       | T_IDENT
  60       | T_DEREF T_IDENT
  61       | '(' expr ')'
  62       | expr '+' expr
  63       | expr '-' expr
  64       | expr '*' expr
  65       | expr '/' expr
  66       | expr '%' expr
  67       | expr T_ELLIPSIS expr
  68       | expr 'V' expr
  69       | expr 'G' expr

state 0
	$accept : . input $end  (0)
	rules : .  (2)

	.  reduce 2

	input  goto 1
	rules  goto 2


state 1
	$accept : input . $end  (0)

	$end  accept


state 2
	input : rules .  (1)
	rules : rules . rule  (3)
	rules : rules . mapping  (4)
	rules : rules . transformation  (5)

	T_XFORM  shift 3
	T_RESOURCE  shift 4
	T_IDENT  shift 5
	$end  reduce 1

	rule  goto 6
	mapping  goto 7
	transformation  goto 8


state 3
	transformation : T_XFORM . T_IDENT ':' transopts ';'  (9)

	T_IDENT  shift 9
	.  error


state 4
	rule : T_RESOURCE . T_IDENT ':' options ';'  (7)

	T_IDENT  shift 10
	.  error


state 5
	rule : T_IDENT . ':' options ';'  (6)
	rule : T_IDENT . '(' params ')' ':' options ';'  (8)
	mapping : T_IDENT . ':' mapopts ';'  (19)

	':'  shift 11
	'('  shift 12
	.  error


state 6
	rules : rules rule .  (3)

	.  reduce 3


state 7
	rules : rules mapping .  (4)

	.  reduce 4


state 8
	rules : rules transformation .  (5)

	.  reduce 5


state 9
	transformation : T_XFORM T_IDENT . ':' transopts ';'  (9)

	':'  shift 13
	.  error


state 10
	rule : T_RESOURCE T_IDENT . ':' options ';'  (7)

	':'  shift 14
	.  error


state 11
	rule : T_IDENT ':' . options ';'  (6)
	mapping : T_IDENT ':' . mapopts ';'  (19)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 19
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	options  goto 26
	option  goto 27
	atoms  goto 28
	atom  goto 29
	atom2  goto 30
	mapopt  goto 31
	mapopts  goto 32


state 12
	rule : T_IDENT '(' . params ')' ':' options ';'  (8)

	T_IDENT  shift 33
	.  error

	params  goto 34


state 13
	transformation : T_XFORM T_IDENT ':' . transopts ';'  (9)

	T_LITERAL  shift 35
	.  error

	transopt  goto 36
	transopts  goto 37


state 14
	rule : T_RESOURCE T_IDENT ':' . options ';'  (7)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	options  goto 39
	option  goto 27
	atoms  goto 28
	atom  goto 29
	atom2  goto 30


state 15
	atom : T_REPEAT . '(' atom ',' T_INTEGER ')'  (44)
	atom : T_REPEAT . '(' atom ',' T_IDENT ')'  (45)

	'('  shift 40
	.  error


state 16
	atom : T_UNIQUE . atom  (46)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 41
	atom2  goto 30


state 17
	atom : T_ENUM . atom  (47)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 42
	atom2  goto 30


state 18
	atom : T_PICK . '(' T_INTEGER ',' atom ')'  (48)

	'('  shift 43
	.  error


state 19
	mapopt : T_LITERAL . 'M' mapaction  (22)
	mapopt : T_LITERAL . 'R' T_LITERAL  (23)
	atom2 : T_LITERAL .  (49)

	'M'  shift 44
	'R'  shift 45
	T_REPEAT  reduce 49
	T_UNIQUE  reduce 49
	T_ENUM  reduce 49
	T_PICK  reduce 49
	T_LITERAL  reduce 49
	T_IDENT  reduce 49
	'?'  reduce 49
	T_DEREF  reduce 49
	'>'  reduce 49
	'+'  reduce 49
	'*'  reduce 49
	';'  reduce 49
	'|'  reduce 49
	'$'  reduce 49
	'{'  reduce 49
	'['  reduce 49


state 20
	atom : T_IDENT . 'V' atom  (36)
	atom : T_IDENT . '=' atom  (37)
	atom2 : T_IDENT .  (50)
	atom2 : T_IDENT . '(' atoms ')'  (51)

	'V'  shift 46
	'('  shift 47
	'='  shift 48
	T_REPEAT  reduce 50
	T_UNIQUE  reduce 50
	T_ENUM  reduce 50
	T_PICK  reduce 50
	T_LITERAL  reduce 50
	T_IDENT  reduce 50
	'?'  reduce 50
	T_DEREF  reduce 50
	'>'  reduce 50
	'+'  reduce 50
	'*'  reduce 50
	';'  reduce 50
	')'  reduce 50
	','  reduce 50
	'|'  reduce 50
	'$'  reduce 50
	'{'  reduce 50
	'['  reduce 50
	']'  reduce 50


state 21
	atom : '?' . atom  (40)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 49
	atom2  goto 30


state 22
	atom : T_DEREF . atom  (35)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 50
	atom2  goto 30


state 23
	atom : '$' . T_IDENT  (38)

	T_IDENT  shift 51
	.  error


state 24
	atom : '{' . imperatives '}'  (39)
	imperatives : .  (52)

	T_IDENT  shift 52
	'='  shift 53
	';'  reduce 52
	'}'  reduce 52

	imperatives  goto 54
	imperative  goto 55


state 25
	atom : '[' . options ']'  (43)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	options  goto 56
	option  goto 27
	atoms  goto 28
	atom  goto 29
	atom2  goto 30


state 26
	rule : T_IDENT ':' options . ';'  (6)

	';'  shift 57
	.  error


state 27
	options : option . '|' options  (28)
	options : option .  (29)

	'|'  shift 58
	';'  reduce 29
	']'  reduce 29


state 28
	option : atoms .  (30)
	atoms : atoms . atom  (31)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	';'  reduce 30
	'|'  reduce 30
	']'  reduce 30

	atom  goto 59
	atom2  goto 30


state 29
	atoms : atom .  (32)
	atom : atom . '>' T_IDENT  (34)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 32
	T_UNIQUE  reduce 32
	T_ENUM  reduce 32
	T_PICK  reduce 32
	T_LITERAL  reduce 32
	T_IDENT  reduce 32
	'?'  reduce 32
	T_DEREF  reduce 32
	';'  reduce 32
	')'  reduce 32
	'|'  reduce 32
	'$'  reduce 32
	'{'  reduce 32
	'['  reduce 32
	']'  reduce 32


state 30
	atom : atom2 .  (33)

	.  reduce 33


state 31
	mapopts : mapopt .  (21)

	.  reduce 21


state 32
	mapping : T_IDENT ':' mapopts . ';'  (19)
	mapopts : mapopts . mapopt  (20)

	T_LITERAL  shift 63
	';'  shift 64
	.  error

	mapopt  goto 65


state 33
	params : T_IDENT .  (27)

	.  reduce 27


state 34
	rule : T_IDENT '(' params . ')' ':' options ';'  (8)
	params : params . T_IDENT  (26)

	T_IDENT  shift 66
	')'  shift 67
	.  error


state 35
	transopt : T_LITERAL . ':' transcmd  (12)

	':'  shift 68
	.  error


state 36
	transopts : transopt . transopts  (10)
	transopts : transopt .  (11)

	T_LITERAL  shift 35
	';'  reduce 11

	transopt  goto 36
	transopts  goto 69


state 37
	transformation : T_XFORM T_IDENT ':' transopts . ';'  (9)

	';'  shift 70
	.  error


state 38
	atom2 : T_LITERAL .  (49)

	.  reduce 49


state 39
	rule : T_RESOURCE T_IDENT ':' options . ';'  (7)

	';'  shift 71
	.  error


state 40
	atom : T_REPEAT '(' . atom ',' T_INTEGER ')'  (44)
	atom : T_REPEAT '(' . atom ',' T_IDENT ')'  (45)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 72
	atom2  goto 30


state 41
	atom : atom . '>' T_IDENT  (34)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)
	atom : T_UNIQUE atom .  (46)

	.  reduce 46


state 42
	atom : atom . '>' T_IDENT  (34)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)
	atom : T_ENUM atom .  (47)

	.  reduce 47


state 43
	atom : T_PICK '(' . T_INTEGER ',' atom ')'  (48)

	T_INTEGER  shift 73
	.  error


state 44
	mapopt : T_LITERAL 'M' . mapaction  (22)

	T_LITERAL  shift 74
	.  error

	mapaction  goto 75


state 45
	mapopt : T_LITERAL 'R' . T_LITERAL  (23)

	T_LITERAL  shift 76
	.  error


state 46
	atom : T_IDENT 'V' . atom  (36)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 77
	atom2  goto 30


state 47
	atom2 : T_IDENT '(' . atoms ')'  (51)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atoms  goto 78
	atom  goto 29
	atom2  goto 30


state 48
	atom : T_IDENT '=' . atom  (37)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 79
	atom2  goto 30


state 49
	atom : atom . '>' T_IDENT  (34)
	atom : '?' atom .  (40)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 40
	T_UNIQUE  reduce 40
	T_ENUM  reduce 40
	T_PICK  reduce 40
	T_LITERAL  reduce 40
	T_IDENT  reduce 40
	'?'  reduce 40
	T_DEREF  reduce 40
	';'  reduce 40
	')'  reduce 40
	','  reduce 40
	'|'  reduce 40
	'$'  reduce 40
	'{'  reduce 40
	'['  reduce 40
	']'  reduce 40


state 50
	atom : atom . '>' T_IDENT  (34)
	atom : T_DEREF atom .  (35)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 35
	T_UNIQUE  reduce 35
	T_ENUM  reduce 35
	T_PICK  reduce 35
	T_LITERAL  reduce 35
	T_IDENT  reduce 35
	'?'  reduce 35
	T_DEREF  reduce 35
	';'  reduce 35
	')'  reduce 35
	','  reduce 35
	'|'  reduce 35
	'$'  reduce 35
	'{'  reduce 35
	'['  reduce 35
	']'  reduce 35


state 51
	atom : '$' T_IDENT .  (38)

	.  reduce 38


state 52
	imperative : T_IDENT . '=' expr  (55)

	'='  shift 80
	.  error


state 53
	imperative : '=' . expr  (56)

	T_LITERAL  shift 81
	T_IDENT  shift 82
	T_INTEGER  shift 83
	T_DEREF  shift 84
	'('  shift 85
	.  error

	expr  goto 86


state 54
	atom : '{' imperatives . '}'  (39)
	imperatives : imperatives . ';' imperative  (54)

	';'  shift 87
	'}'  shift 88
	.  error


state 55
	imperatives : imperative .  (53)

	.  reduce 53


state 56
	atom : '[' options . ']'  (43)

	']'  shift 89
	.  error


state 57
	rule : T_IDENT ':' options ';' .  (6)

	.  reduce 6


state 58
	options : option '|' . options  (28)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	options  goto 90
	option  goto 27
	atoms  goto 28
	atom  goto 29
	atom2  goto 30


state 59
	atoms : atoms atom .  (31)
	atom : atom . '>' T_IDENT  (34)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 31
	T_UNIQUE  reduce 31
	T_ENUM  reduce 31
	T_PICK  reduce 31
	T_LITERAL  reduce 31
	T_IDENT  reduce 31
	'?'  reduce 31
	T_DEREF  reduce 31
	';'  reduce 31
	')'  reduce 31
	'|'  reduce 31
	'$'  reduce 31
	'{'  reduce 31
	'['  reduce 31
	']'  reduce 31


state 60
	atom : atom '>' . T_IDENT  (34)

	T_IDENT  shift 91
	.  error


state 61
	atom : atom '+' .  (42)

	.  reduce 42


state 62
	atom : atom '*' .  (41)

	.  reduce 41


state 63
	mapopt : T_LITERAL . 'M' mapaction  (22)
	mapopt : T_LITERAL . 'R' T_LITERAL  (23)

	'M'  shift 44
	'R'  shift 45
	.  error


state 64
	mapping : T_IDENT ':' mapopts ';' .  (19)

	.  reduce 19


state 65
	mapopts : mapopts mapopt .  (20)

	.  reduce 20


state 66
	params : params T_IDENT .  (26)

	.  reduce 26


state 67
	rule : T_IDENT '(' params ')' . ':' options ';'  (8)

	':'  shift 92
	.  error


state 68
	transopt : T_LITERAL ':' . transcmd  (12)
	transaddr : .  (16)

	T_INTEGER  shift 93
	T_IDENT  reduce 16

	transaddr  goto 94
	transcmd  goto 95


state 69
	transopts : transopt transopts .  (10)

	.  reduce 10


state 70
	transformation : T_XFORM T_IDENT ':' transopts ';' .  (9)

	.  reduce 9


state 71
	rule : T_RESOURCE T_IDENT ':' options ';' .  (7)

	.  reduce 7


state 72
	atom : atom . '>' T_IDENT  (34)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)
	atom : T_REPEAT '(' atom . ',' T_INTEGER ')'  (44)
	atom : T_REPEAT '(' atom . ',' T_IDENT ')'  (45)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	','  shift 96
	.  error


state 73
	atom : T_PICK '(' T_INTEGER . ',' atom ')'  (48)

	','  shift 97
	.  error


state 74
	mapaction : T_LITERAL .  (24)
	mapaction : T_LITERAL . '/' T_LITERAL  (25)

	'/'  shift 98
	T_LITERAL  reduce 24
	';'  reduce 24


state 75
	mapopt : T_LITERAL 'M' mapaction .  (22)

	.  reduce 22


state 76
	mapopt : T_LITERAL 'R' T_LITERAL .  (23)

	.  reduce 23


state 77
	atom : atom . '>' T_IDENT  (34)
	atom : T_IDENT 'V' atom .  (36)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 36
	T_UNIQUE  reduce 36
	T_ENUM  reduce 36
	T_PICK  reduce 36
	T_LITERAL  reduce 36
	T_IDENT  reduce 36
	'?'  reduce 36
	T_DEREF  reduce 36
	'>'  reduce 36
	';'  reduce 36
	')'  reduce 36
	','  reduce 36
	'|'  reduce 36
	'$'  reduce 36
	'{'  reduce 36
	'['  reduce 36
	']'  reduce 36


state 78
	atoms : atoms . atom  (31)
	atom2 : T_IDENT '(' atoms . ')'  (51)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	')'  shift 99
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	atom  goto 59
	atom2  goto 30


79: shift/reduce conflict (shift 60, reduce 37) on '>'
79: shift/reduce conflict (shift 61, reduce 37) on '+'
79: shift/reduce conflict (shift 62, reduce 37) on '*'
state 79
	atom : atom . '>' T_IDENT  (34)
	atom : T_IDENT '=' atom .  (37)
	atom : atom . '*'  (41)
	atom : atom . '+'  (42)

	'>'  shift 60
	'+'  shift 61
	'*'  shift 62
	T_REPEAT  reduce 37
	T_UNIQUE  reduce 37
	T_ENUM  reduce 37
	T_PICK  reduce 37
	T_LITERAL  reduce 37
	T_IDENT  reduce 37
	'?'  reduce 37
	T_DEREF  reduce 37
	';'  reduce 37
	')'  reduce 37
	','  reduce 37
	'|'  reduce 37
	'$'  reduce 37
	'{'  reduce 37
	'['  reduce 37
	']'  reduce 37


state 80
	imperative : T_IDENT '=' . expr  (55)

	T_LITERAL  shift 81
	T_IDENT  shift 82
	T_INTEGER  shift 83
	T_DEREF  shift 84
	'('  shift 85
	.  error

	expr  goto 100


state 81
	expr : T_LITERAL .  (58)

	.  reduce 58


state 82
	expr : T_IDENT .  (59)

	.  reduce 59


state 83
	expr : T_INTEGER .  (57)

	.  reduce 57


state 84
	expr : T_DEREF . T_IDENT  (60)

	T_IDENT  shift 101
	.  error


state 85
	expr : '(' . expr ')'  (61)

	T_LITERAL  shift 81
	T_IDENT  shift 82
	T_INTEGER  shift 83
	T_DEREF  shift 84
	'('  shift 85
	.  error

	expr  goto 102


state 86
	imperative : '=' expr .  (56)
	expr : expr . '+' expr  (62)
	expr : expr . '-' expr  (63)
	expr : expr . '*' expr  (64)
	expr : expr . '/' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . T_ELLIPSIS expr  (67)
	expr : expr . 'V' expr  (68)
	expr : expr . 'G' expr  (69)

	T_ELLIPSIS  shift 103
	'V'  shift 104
	'G'  shift 105
	'-'  shift 106
	'+'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	';'  reduce 56
	'}'  reduce 56


state 87
	imperatives : imperatives ';' . imperative  (54)

	T_IDENT  shift 52
	'='  shift 53
	.  error

	imperative  goto 111


state 88
	atom : '{' imperatives '}' .  (39)

	.  reduce 39


state 89
	atom : '[' options ']' .  (43)

	.  reduce 43


state 90
	options : option '|' options .  (28)

	.  reduce 28


state 91
	atom : atom '>' T_IDENT .  (34)

	.  reduce 34


state 92
	rule : T_IDENT '(' params ')' ':' . options ';'  (8)

	T_REPEAT  shift 15
	T_UNIQUE  shift 16
	T_ENUM  shift 17
	T_PICK  shift 18
	T_LITERAL  shift 38
	T_IDENT  shift 20
	'?'  shift 21
	T_DEREF  shift 22
	'$'  shift 23
	'{'  shift 24
	'['  shift 25
	.  error

	options  goto 112
	option  goto 27
	atoms  goto 28
	atom  goto 29
	atom2  goto 30


state 93
	transaddr : T_INTEGER .  (14)
	transaddr : T_INTEGER . ',' T_INTEGER  (15)

	','  shift 113
	T_IDENT  reduce 14


state 94
	transcmd : transaddr . T_IDENT translist ';'  (13)

	T_IDENT  shift 114
	.  error


state 95
	transopt : T_LITERAL ':' transcmd .  (12)

	.  reduce 12


state 96
	atom : T_REPEAT '(' atom ',' . T_INTEGER ')'  (44)
	atom : T_REPEAT '(' atom ',' . T_IDENT ')'  (45)

	T_IDENT  shift 115
	T_INTEGER  shift 116
	.  error


state 97
	atom : T_PICK '(' T_INTEGER ',' . atom ')'  (48)
